<resources>
    <string name="app_name">Calculos Trabalhistas</string>
    <string name="fgts">CALCULAR FGTS</string>
    <string name="seguroDesemprego">CALCULAR SEGURO DESEMPREGO</string>
    <string name="ferias">CALCULAR FÉRIAS</string>
    <string name="recisao">CALCULAR RECISÃO</string>
    <string name="inss">CALCULAR INSS</string>
    <string name="salarioLiquido">CALCULAR SALÁRIO LÍQUIDO</string>
    <string name="adicionalNoturno">CALCULAR ADCIONAL NOTURNO</string>
    <string name="horaExtra">CALCULAR HORA EXTRA</string>
    <string name="salarioHora">CALCULAR SALÁRIO POR HORA</string>
    <string name="fonte">FONTE</string>
    <string name="x">X</string>
    <string name="calcular">CALCULAR</string>
    <string name="salarioBruto">Salário Bruto</string>
    <string name="mesesTrabalhados">Meses Trabalhados</string>
    <string name="antiPSalario">Antepenultimo Salário</string>
    <string name="penultimoSalario">Penultimo Salário</string>
    <string name="ultimoSalario">Ultimo Salário</string>
    <string name="resultado">Resultado</string>
    <string name="salarioFerias">Salário</string>
    <string name="meses">Meses Trabalhados</string>
    <string name="faltas">Faltas Sem Atestado</string>

</resources>
