<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FeriasActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtSalarioF"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:inputType="numberDecimal"
            android:hint="@string/salarioFerias"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtMeses" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtSalarioF" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:inputType="number" android:hint="@string/meses"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtFaltas" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/txtMeses" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:inputType="number"
            android:hint="@string/faltas" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalcularF" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFaltas"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/fonte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFonteF" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFaltas"
            app:layout_constraintStart_toStartOf="@+id/btnCalcularF" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultadoF" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCalcularF" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>